--- a/package.json
+++ b/package.json
@@ -12,14 +12,6 @@
     "aws-sdk": "^2.403.0",
     "ejs": "^2.6.1",
     "html-pdf": "^2.2.0",
-    "jspdf": "^1.5.3",
-    "juice": "^5.1.0",
-    "node-uuid": "^1.4.8",
-    "pdfkit": "^0.9.0",
-    "pdfkitjs": "0.0.5",
-    "phantom": "^6.0.3",
-    "puppeteer": "^1.12.2",
-    "puppeteer-core": "^1.12.2",
-    "wkhtmltopdf": "^0.3.4"
+    "juice": "^5.1.0"
   }
 }
